# webpage

./: .drone.yml  Cargo.toml  Dockerfile  README.md  flake.nix  redirect_pelican.conf
dhall/: salaries.dhall
dhall/types/: Salary.dhall
md/: test.md  test2.md
old_md/: about.md  active_directory.md  altibox-6rd-debian.md  apt-fixing-missing-gpg.md  bind_dns_notes.md  btrfs.md  cisco-express-500.md  cisco-firmware.md  cisco_notes.md  cu-serial-console.md  ddu.md  debian-compile-latest-kernel.md  debian-docker-options.md  dhclient-not-overwrite-resolv.md  dhcpd_notes.md  dig.md  docker.md  email-signature.md  hotkeys.md  hpacucli.md  install-windows8-virtualbox.md  intel_d2500cc_graphics.md  ip-plan.md  kvm.md  lan-parties.md  lan-resume.md  mac-socks-command.md  multiple-isp.md  netcom-4g-incomming-traffic.md  nginx.md  nginx_script_proxy_pass.md  nmap.md  openvpn.md  pelican.md  postfix.md  postgres.md  ptunnel.md  quassel_core_ldap.md  raspi-nftables.md  raspi-vlc-c270.md  (+43 more)
src/: lib.rs  main.rs
