[package]
name = "kradalby"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = { version = "0.6", features = ["headers"] }
axum-macros = "0.3"
axum-extra = { version = "0.4", features = ["spa"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_dhall = "0.12.0"
titlecase = "2"
tokio = { version = "1", features = ["full"] }
pulldown-cmark = { version = "0.9.2", features = ["simd"] }
frontmatter = "0.4.0"
serde_yaml = "0.9.19"
yaml-rust = "0.4.5"

[dependencies.maud]
git = "https://github.com/Xe/maud"
rev = "a40596c42c7603cc4610bbeddea04c4bd8b312d9"
features = [ "axum" ]

[dependencies.tower]
version = "0.4"
features = [ "full" ]

[dependencies.tower-http]
version = "0.3"
features = [ "full" ]
